--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ val_data_file: clean_validation_data.h5
 test_data_file: clean_test_data.h5
 sunglasses_data_file: sunglasses_poisoned_data.h5
 anonymous_1_data_file: anonymous_1_poisoned_data.h5
-anonymous_2_data_file: ???
+anonymous_2_data_file: anonymous_1_poisoned_data.h5
 multi_trigger_multi_target_data_file: Multi-trigger Multi-target/
 
 
